Fix scrollbar, figure padding and progress bars

--- a/src/components/sharedComponents/Figure/Figure.scss
+++ b/src/components/sharedComponents/Figure/Figure.scss
@@ -5,12 +5,12 @@
 
 .Figure {
     margin: 0 auto;
+    padding: 0;
     div {
         position: relative;
-        max-width: 100%;
         width: auto;
-        height: 100%;
-        padding: 0;
+        max-width: 100%;
+        max-height: calc(100% - 10px);
 
         .Figure__icon {
             background-color: rgba(0, 0, 0, 0.5);
@@ -32,9 +32,13 @@
             color: white;
         }
 
-        img {
+        img {            
             max-width: 100%;
-            height: 100%;
+            height: auto;
+            margin: 0;
+            padding: 0;
+            display: block;
+            object-fit: contain;
         }
 
         img.bg--white {
