--- a/src/components/sharedComponents/Page/Page.scss
+++ b/src/components/sharedComponents/Page/Page.scss
@@ -1,3 +1,8 @@
 .Page {
     position: relative;
+    min-width: 100vw;
+    min-height: 100vh;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    margin: 0;
 }
